[project]
name = "super-parakeet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ragulate==0.0.14",
    "kaleido==0.2.1",
    "langchain-openai>=0.1.22",
    "markdownify>=0.13.1",
    "ragstack-ai-knowledge-store>=0.2.1",
    "tqdm>=4.66.5",
    "keybert>=0.8.5",
    "keyphrase-vectorizers>=0.0.9",
    "mistune>=3.0.2",
    "markdown-it-py>=3.0.0",
    "markdown>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
